<resources>
    <string name="app_name">Matchit</string>
    <string name="facebook_app_id">331655280904533</string>
    <string name="fb_login_protocol_scheme">fb331655280904533</string>
    <string name="Authentication_failed">Authentication failed</string>
    <string name="CancelLoginfacebook">Cancel Login with facebook</string>
    <string name="ErrorLoginFacebook">Error logging in with facebook</string>
    <string name="ValidName">Please enter valid name</string>
    <string name="ValidPass">Please enter valid password (at least 6 numbers)</string>
    <string name="ValidEmail">Please enter valid email</string>
    <string name="ValidPic">Please upload a picture</string>
    <string name="RegisterFailed">Register failed</string>
    <string name="Email">Email</string>
    <string name="IncorrectUsernamePass">Incorrect username or password</string>
    <string name="Uploading">Uploading...</string>
    <string name="ImageUploaded">Image uploaded</string>
    <string name="Uploaded">Uploaded</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Welcome">"Welcome "</string>
    <string name="SinglePlayer">SinglePlayer</string>
    <string name="MultiPlayer">MultiPlayer</string>
    <string name="Nickname">Nickname</string>
    <string name="UploadPicture">Upload picture</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="AreYouSureOut">Are you sure you want to sign out?</string>
    <string name="SignOut">Sign out</string>
    <string name="Yes">Yes</string>
    <string name="StartGame">Start Game</string>
    <string name="Cancel">Cancel</string>
    <string name="Country">Country</string>
    <string name="Math">Math</string>
    <string name="Time">Time</string>
    <string name="youWon">You Won !</string>
</resources>
