<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/layout_main_activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/logo_big"/>

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_email"
    android:hint="@string/Email"
        android:layout_marginBottom="8dp"
    android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/btn_login"
        android:textSize="20sp"
        android:text="@string/Login"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        android:textSize="20sp"
        android:text="@string/Register"/>



    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layout_gravity="center_horizontal"

        />




</LinearLayout>